# cptkip

./: .gitignore  BUGS.md  CLAUDE.md  README.md  changelog.md  config.py  development_environment.md  memory_usage.md  pyproject.toml  requirements.txt  roadmap.md
.github/workflows/: python-app.yml
CircuitPython/10.2.1/: adafruit-circuitpython-itsybitsy_m4_express-en_GB-10.2.1.uf2  adafruit-circuitpython-pimoroni_pico_plus2-en_GB-10.2.1.uf2  adafruit-circuitpython-pimoroni_tiny2040-en_GB-10.2.1.uf2  (+9 more)
cptkip/: __init__.py
examples/: a_example_core.py  b_config_load_values.py  c_cpu_display_details.py  config.py  d_blink_led.py  d_neopixels.py  d_tasks_two_periodic_async_tasks.py  d_tasks_two_periodic_tasks.py  d_tasks_two_trivial_async_tasks.py  d_tasks_two_trivial_tasks.py  d_two_periodic_tasks.py  d_two_trivial_tasks.py  e_blink_led.py  e_blink_led_using_task.py  e_dim_led.py  e_hal_outputpin_blink_led.py  e_hal_pixels.py  e_hal_pwmpin_dim_led.py  e_neopixels.py  e_pin_outputpin_blink_led.py  e_pin_outputpin_blink_led_using_task.py  e_pin_pwmpin_dim_led.py  f_button_example.py  f_device_button.py  f_device_buzzer.py  f_device_led.py  f_device_led_blink.py  f_device_pixels.py  f_device_play_melody.py  f_device_pwm_audio.py  g_animate_led.py  g_animate_leds.py  g_animate_neopixels.py  g_neopixels.py  h_animate_leds.py  h_sound_play_melody.py  i_play_music.py  test_examples.py
validate/: utils.py  validate_all.py  validate_animation.py  validate_core.py  validate_device.py  validate_f_device.py  validate_performance.py  validate_pin.py  validate_task.py  validation.md
(+220 files in other folders)
