# See: https://packaging.python.org/en/latest/overview/
[build-system]
requires = ["setuptools >= 82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "cptkip"
version = "2026.7.0"
requires-python = ">= 3.12, < 3.15"
description = "Circuit Python Toolkit for Interactive Projects"
readme = "README.md"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.setuptools]
packages = ["cptkip"]

[tool.pytest.ini_options]
pythonpath = "."
